# signalbudget

./: .gitattributes  .gitignore  README.md  constraints.txt  pyproject.toml
.github/workflows/: ci.yml
artifacts/phase-10/: tradeoff-explanations.json  tradeoff-explanations.md
artifacts/phase-9/: pareto-analysis.json
catalog/: detection_dependencies.yaml  investigation_questions.yaml  log_sources.yaml
contracts/: detfuzz_result_schema.json
docs/: architecture.md  data-contract.md  demo-script.md  evidence-index.md  limitations-and-future-work.md  phase-10-summary.md  phase-11-summary.md  phase-11-vm-validation.md  phase-8-summary.md  phase-9-summary.md  pricing-assumptions.md  source-volume-measurement.md  v1-scope.md
evidence/: README.md  detfuzz-signalbudget-results-20260723-212216-posix.sha256.txt  detfuzz-signalbudget-results-20260723-212216.sha256.txt  pareto-analysis.md
integration_tests/: test_detfuzz_signalbudget_contract.py
measurements/: detfuzz_lab_measurements.yaml  source_volumes_lab_sample.yaml
pricing/: microsoft_sentinel_eastus_2026-07-21.yaml
src/signalbudget/: __init__.py  cli.py  configurations.py  contracts.py  costing.py  coverage.py  freshness.py  loaders.py  pareto.py  tradeoffs.py
src/signalbudget.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_catalog.py  test_cli.py  test_configurations.py  test_contracts.py  test_costing.py  test_freshness.py  test_no_detfuzz_imports.py  test_pareto.py  test_tradeoffs.py
tests/fixtures/: bad-schema-version.json  benign-results.json  full-suite-report.json  (+1 more)
(+47 files in other folders)
